--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ input[type="submit"] {
      background: none;
      border: 0
 } 
-
+button { border: 0; cursor: pointer; }
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
   color: #ffffff;
 }
@@ -41,6 +41,7 @@ select:-webkit-autofill, input:-webkit-autofill {
     -webkit-box-shadow: 0 0 0 1000px #ffffff inset !important;
 }
 
+/********common css******/
 .fl{float: left;}
 .fr{float: right}
 .txt-left{text-align: left}
@@ -48,7 +49,12 @@ select:-webkit-autofill, input:-webkit-autofill {
 .txt-center{text-align: center}
 .headH1{color: #fff; font-size: 60px;font-weight: 900}
 .headH1 span{font-weight: 400}
+.headH2{color: #606060;font-weight: 900}
+.headH2 span{font-weight: 400}  
 .mgZero{margin:0 !important }
+
+/*******************/
+
 
 .container{width: 1168px; margin:0 auto;}
 .containerMd{width: 1090px;margin: 0 auto}
@@ -57,6 +63,32 @@ select:-webkit-autofill, input:-webkit-autofill {
 .dropdownMenu{width: 100%;top:-194px;position: absolute; display: none; z-index: 0}
 
 .hidden{display: none}
+
+
+/*********common css***********/
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 30.75%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+[class*="col-"] {float: left; padding: 0 15px; border: 1px solid red}
+.row::after {content: "";clear: both; display: table;}
+
+/***button css***/
+.btn-black { background: #1b1d24; color: #fff; font-weight: 700; font-size: 20px; padding: 15px 35px;}
+
+/*******margins****/
+.marg-t-20 { margin-top: 42px }
+.pad-0 { padding: 0; }
+/**********/
+/***************/
 
 /*---------------header css start-------------------*/
 .headWrap{background: #fff; width: 100%;z-index: 1; position: relative;}
@@ -103,7 +135,40 @@ select:-webkit-autofill, input:-webkit-autofill {
 
 /*-----sameer------*/
   /*--blog--*/
-  .tablist li a { font-weight: 400; font-size: 14px; color: #1b1d24}
+  .tablist { float: left; margin-top: 12px}
+  .tablist li { display: inline-block; padding: 0 10px;}
+  .tablist li a { font-weight: 400; font-size: 14px; text-transform: uppercase; color: #1b1d24;transition: .5s ease all}
+  .tablist li a:hover, .tablist li a.active { border-bottom: 1px solid #000; padding-bottom: 5px  }
+  .crsl-items{margin: 30px auto;}
+  .crsl-item figcaption{ 
+    position: absolute;
+    bottom: 4px;
+    left: 0;
+    width: 98.9%;
+    padding: 10px;
+    color: #FFF;
+    background: rgba(20,22,29,.5); padding:20px; color: #6d6d6e; font-size: 14px; font-weight: 700}
+  .blogmsg { display: block; text-transform: uppercase; color: #fff; font-size: 18px; margin-bottom: 10px }
+  .crsl-nav{position: relative;min-height: 1px;display: block!important; margin-right: 7px; float: right;}
+  .crsl-nav .previous, .crsl-nav .next{float: right; background: url(../images/prev.jpg) no-repeat 0; text-indent: -70px;
+    overflow: hidden; width: 32px; height: 52px;}
+  .crsl-nav .next{float: right; background: url(../images/next.jpg) no-repeat 0; }
+  .advbg { background: url(../images/adbg.jpg) no-repeat 0 0; background-size: cover; }
+  .pad-tb-20 { padding: 64px 0}
+  .bgGray { background: #b0b1b7; }
+  .heading_h5, .heading_h6 {font-size: 18px;
+    color: #1b1d24;
+    font-weight: 700;
+    text-transform: uppercase; margin-top: 8px;
+  }
+    .heading_h6 { font-size: 14px; margin-top: 6px; }
+    .newscopy { font-size: 14px;font-weight: 400; color: #1b1d24; margin-top: 19px; line-height: 20px}
+
+/*******article page***/
+.articlepanel { margin-top: 25px; }
+  .apic {}
+/***********/
+    
 
 /*-----end sameer------*/
 
