--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ select:-webkit-autofill, input:-webkit-autofill {
 /*-----sameer------*/
   /*--blog--*/
   .tablist { float: left; margin-top: 12px}
-  .tablist li { display: inline-block; padding: 0 10px;}
+  .tablist li { display: inline-block; padding: 0 10px 0 0;}
   .tablist li a { font-weight: 400; font-size: 14px; text-transform: uppercase; color: #1b1d24;transition: .5s ease all}
   .tablist li a:hover, .tablist li a.active { border-bottom: 1px solid #000; padding-bottom: 5px  }
   .crsl-items{margin: 30px auto;}
@@ -167,6 +167,14 @@ select:-webkit-autofill, input:-webkit-autofill {
 /*******article page***/
 .articlepanel { margin-top: 25px; }
   .apic {}
+  .articlepage {margin: 20px 0; }
+  .heading-h1 {text-transform: uppercase;line-height: 38px; font-size: 36px; font-weight: 900;  color:#1b1d24;  }
+  .date { font-size: 18px; color: #ababab; font-weight: 700;line-height: 18px;margin-top: 10px;}
+  .articlecopy { font-size: 14px; font-weight: 400; color: #1b1d24; line-height: 18px; margin: 30px 0; }
+  .articlevideo { width: 100%; }
+  .articleall { margin-top: 15px; }
+  .arelatehead { color: #1b1d24; font-weight: 900; font-size: 36px;  }
+  .blackhr { width: 100%; border-bottom: 1px solid #1b1d24; margin: 15px 0 }
 /***********/
     
 
