--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,12 @@ margin: 20px 20px 0 0;color: #606060;}
 
 
 /*-----sameer------*/
+  /******2018 page tour******/
+  .heading_h1 { color: #1b1d24; font-weight: 900; font-size: 36px; text-align: center;}
+  .homeBaner.tourpanel { background: #edf0f3; padding: 69px 0 0 }
+  .tourmap { background: url(../images/2018map.png) no-repeat 0 0; height: 722px; background-size: 100% }
+  /************/
+
   /******homepage***/
   .slider1 {background: url(../images/homemainbg.jpg) no-repeat top center; height: 100vh; background-size: cover  }
 
@@ -153,7 +159,7 @@ margin: 20px 20px 0 0;color: #606060;}
   .tabpanel { margin-top: 15px }
   .tablist { float: left; margin-top: 0px}
   .tablist li { display: inline-block; padding: 0 10px 0 0;}
-  .tablist li a { font-weight: 400; font-size: 14px; text-transform: uppercase; color: #1b1d24;transition: .5s ease all}
+  .tablist li a { font-weight: 400; font-size: 18px; margin-right: 30px; text-transform: uppercase; color: #1b1d24;transition: .5s ease all}
   .tablist li a:hover, .tablist li a.active { border-bottom: 1px solid #000; padding-bottom: 5px  }
   .crsl-items{margin: 30px auto;}
   .crsl-item figcaption{    position: absolute;bottom: 4px;left: 0; width: 98.9%; padding: 10px;color: #FFF;
@@ -171,23 +177,27 @@ margin: 20px 20px 0 0;color: #606060;}
     .heading_h6 { font-size: 14px; margin-top: 6px;}
     .newscopy { font-size: 14px;font-weight: 400; color: #1b1d24; margin-top: 19px; line-height: 20px}
     .blogrow .col-4 { width: 33.32%;}
-    .relatedarticles .col-4 {width: 33.30%; padding-left: 0!important;}
+    .relatedarticles { margin-top: 35px }
+    .relatedarticles .col-4 {width: 33.30%; padding-left: 0!important; padding-right: 24px}
+    .relatedarticles figcaption { margin-top: 20px }
+    .relatedarticles .heading_h6 { color: #9e9e9e }
+
 
 /*******article page***/
 .articlepanel { margin-top: 25px;}
 .leftpanel {  width: 768px; float: left; }
 .rightpanel { float: right; width: 370px; }
-  .articlepage {margin: 20px 0; }
+  .articlepage {margin:50px 0; }
   .heading-h1 {text-transform: uppercase;line-height: 38px; font-size: 36px; font-weight: 900;  color:#1b1d24;  }
   .date { font-size: 18px; color: #ababab; font-weight: 700;line-height: 18px;margin-top: 10px;}
-  .articlecopy { font-size: 14px; font-weight: 400; color: #1b1d24; line-height: 18px; margin: 15px 0; }
-  .articlevideo { width: 100%; }
+  .articlecopy { font-size: 14px; font-weight: 400; color: #1b1d24; line-height: 21px; margin: 35px 0; }
+  .articlevideo { width: 100%; margin: 50px 0}
   .articleall { margin: 15px 0 45px; }
   .arelatehead { color: #1b1d24; font-weight: 900; font-size: 36px;  }
   .blackhr { width: 100%; border-bottom: 1px solid #1b1d24; margin: 15px 0 }
   .emailsubpanel { width: 100%; background: #1b1d24; padding:25px; }
    .emailsubpanel .heading_h5 { color: #fff }
-   .emailsubpanel .articlecopy { color: #fff }
+   .emailsubpanel .articlecopy { color: #fff; margin: 20px 0}
    .esubfield {width: 91%;  border: 1px solid #fff; font-size: 14px; color: #fff; line-height: 36px;
     background: none; margin-bottom: 8px; padding: 0 4%;margin: 5px 0 30px;}
     .newslist {margin-top: 25px}
@@ -213,7 +223,7 @@ margin: 20px 20px 0 0;color: #606060;}
     .socialicon a { display: inline-block; margin-right: 9px }
     .socialicon a.last { margin-right: 0 }
     .footerwithtxt { margin-top:55px }
-
+    .datetxt { color: #ababab }
   
 /***********/
     
