--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 .clearfix:after {clear: both}
 .clearfix {zoom: 1}
 html{height: 100%}
-body{-webkit-text-size-adjust:100%;font-family: 'Lato', sans-serif, arial; font-size:18px;color: #ffffff;  }
+body{-webkit-text-size-adjust:100%;font-family: 'Lato', sans-serif, arial; font-weight: 400; font-size:18px;color: #ffffff;  }
 li{list-style: none;}
 a{text-decoration: none; outline: none}
 a:hover{cursor: pointer}
@@ -98,6 +98,7 @@ select:-webkit-autofill, input:-webkit-autofill {
 
 /*----- video css start --------*/
 .videoWrap{padding:80px 0;}
+.videoWrap.pad-t-0 { padding: 0 0 80px }
 .videoWrap .headH2{margin-bottom: 30px}
 .videoWrap .videoCnt .videoBlock{width: 375px; height: auto;display: inline-block;
 margin: 20px 20px 0 0;color: #606060;}
@@ -151,10 +152,20 @@ margin: 20px 20px 0 0;color: #606060;}
 
 
 /*-----sameer------*/
-  /******2018 page tour******/
+  /******tour******/
   .heading_h1 { color: #1b1d24; font-weight: 900; font-size: 36px; text-align: center;}
   .homeBaner.tourpanel { background: #edf0f3; padding: 69px 0 0 }
   .tourmap { background: url(../images/2018map.png) no-repeat 0 0; height: 722px; background-size: 100% }
+  .contest{background: url(../images/contestbg.jpg) no-repeat center;}
+  .whitecolor { color: #fff }
+  .judgespanel { background: #9ec1dd; padding: 120px 0}
+  .judgecol li { width:31%; margin-right: 30px; float: left;}
+  .judgecol li:last-child { margin-right:0; }
+  .judgecol li .colj {background: #1a1d24;  height: 340px; float: left; position: relative; width: 100% }
+  .judgname {padding: 10px 0px 10px 10px; font-size: 22px; font-weight: 900; font-style: italic; color: #fff;
+    border-right: 50px solid transparent; border-bottom: 70px solid #e32b45; width: 80%;position: absolute;
+    bottom: 0;}
+      .judgname > span { position: absolute; top: 44px; left: 32px;}
   /************/
 
   /******homepage***/
@@ -280,7 +291,6 @@ margin: 20px 20px 0 0;color: #606060;}
 /*----- Numbers css end ---------*/
 
 .season2{background: url(../images/season2bg.jpg) no-repeat center;}
-
 /*---------- about us css end ------------*/
 
 
@@ -308,7 +318,9 @@ margin: 20px 20px 0 0;color: #606060;}
 /******common margin padding*****/
 .mgZero{margin:0 !important }
 .paddTopBtm {padding: 100px 0}
-.pad-tb-15 { padding: 15px 55px}
+.pad-55 { padding: 15px 55px}
+.padd-tb-50 {margin: 50px 0}
 .mgTop100{margin-top: 100px}
 .mgBtm50{margin-bottom: 50px}
 .mgTop50{margin-top: 50px}
+.marg-tb-50 {margin: 50px 0}
