--- a/css/style.css
+++ b/css/style.css
@@ -363,3 +363,12 @@ margin: 20px 20px 0 0;color: #606060;}
 .mgBtm50{margin-bottom: 50px}
 .mgTop50{margin-top: 50px}
 .marg-tb-50 {margin: 50px 0}
+
+
+
+@media only screen and (max-width: 1180px)  {
+.container{width: 96%;}
+.containerMd{width: 90%;}
+
+.headH1{font-size: 45px}
+}
