--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,19 @@ margin: 20px 20px 0 0;color: #606060;}
 .registerWrap .registerContainer .emailLogin .check{position: relative;top:2px;margin-right: 4px}
 
 .registerWrap .signIn.registerContainer .dividerBlock .txt{margin-top: -21px;}
+
+/********tour hover css*************/
+.tourdropwrap {background: #e32b45;padding: 55px 0;width: 100%; position: absolute; z-index: 1;}
+ .tourcol { width: 389px; padding: 0 25px; float: left; border: 0; border-left: 1px solid #fff;}
+  .tourcol .heading_h5 { font-weight: 900; color: #fff }
+  .tourcol .heading_h6 { font-size: 16px; font-weight: 400; color: #fff; line-height: 18px; text-transform: inherit; }
+  .linktxt { color: #fff; font-size: 14px; font-weight: 400 }
+
+ .mapview { background: url(../images/map.jpg) no-repeat 0 0; width: 298px; height: 143px; margin: 25px 0 19px;}
+
+
+
+/**********************************/
 /*---------------header css end-------------------*/
 
 /*.homeBaner{background: url(../images/homemainbg.jpg) no-repeat top center; height: 100vh; background-size: cover}*/
@@ -371,4 +384,11 @@ margin: 20px 20px 0 0;color: #606060;}
 .containerMd{width: 90%;}
 
 .headH1{font-size: 45px}
+
+/*---- home page css ---------*/
+.videoWrap .videoCnt .videoBlock{width: 29%;margin: 20px 2% 0;}
+
+/*---- home page css end ---------*/
+
+
 }
